syntax = "proto3";

package signaller;

import "google/protobuf/timestamp.proto";

option go_package = ".;proto";

service SignallerApi {
  rpc Stream(stream SubscriptionRequest) returns (stream PositionEvent) {}
}

enum SubscriptionRequestType {
  ADD = 0;
  REMOVE = 1;
}

message SubscriptionRequest {
  SubscriptionRequestType Type = 1;
  repeated string Uids = 2;
}

enum Direction {
  LONG = 0;
  SHORT = 1;
}

enum Type {
  CREATE = 0;
  UPDATE = 1;
  CLOSE = 2;
}

message PositionEvent {
  int64 PositionId = 1;
  string Symbol = 2;
  string TraderUid = 3;
  Direction Direction = 4;
  Type Type = 5;
  string Exchange = 6;
  uint32 Leverage = 7;
  double AmountChange = 8;
  double EntryPrice = 9;
  google.protobuf.Timestamp CreatedAt = 10;
  bool Hedged = 11;
}